<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <TextView
            style="@style/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions" />

        <!-- Question 1: Radio Buttons -->

        <TextView
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1" />

        <RadioGroup
            android:id="@+id/radio_group_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brave" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aristocats" />

            <RadioButton
                android:id="@+id/q1_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratatouille" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rescuers" />

        </RadioGroup>

        <!-- Question 2: Text Entry -->

        <TextView
            style="@style/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/question2"/>

        <EditText
            android:id="@+id/q2_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_answer_here"
            android:inputType="text"
            android:maxLines="1" />

        <!-- Question 3: Radio Buttons -->

        <TextView
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3" />

        <RadioGroup
            android:id="@+id/radio_group_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/giant" />

            <RadioButton
                android:id="@+id/q3_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cleopatra" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ivanhoe" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charade" />

        </RadioGroup>

        <!-- Question 4: Text Entry -->

        <TextView
            style="@style/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/question4"/>

        <EditText
            android:id="@+id/q4_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_answer_here"
            android:inputType="text"
            android:maxLines="1" />

        <!-- Question 5: CheckBox -->

        <TextView
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5" />

        <CheckBox
            android:id="@+id/q5_answer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sissy_spacek" />

        <CheckBox
            android:id="@+id/q5_answer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dee_wallace_stone" />

        <CheckBox
            android:id="@+id/q5_answer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carrie" />

        <CheckBox
            android:id="@+id/q5_answer_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cujo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:onClick="submitAnswers"
            android:text="@string/check_answers" />

    </LinearLayout>
</ScrollView>
